# ecto_registration

./: CMakeLists.txt
cells/: CMakeLists.txt  pe3d_est.cpp  rotate_z.cpp
cells/scripts/: kinect_register.py  kinect_register.py~  orb_compare.py  orb_compare.py~  orb_extract.py  orb_extract.py~  pe3d_estimate.py  pe3d_test_z.py  rgbd_cap.py
cmake/: config.cmake  install.cmake  registrationConfig-version.cmake.in  registrationConfig.cmake.in
include/registration/: pe.h  pe.h~
modules/: CMakeLists.txt  module.cpp
python/registration/: __init__.py  estimator.py  orb_capture.py
src/: CMakeLists.txt  CMakeLists.txt~  pe3d.cpp  pe3d.cpp~  stereo_polish.cpp  stereo_polish.cpp~
test/: CMakeLists.txt
